# State.io

./: CMakeLists.txt  README.md  id_rsa.pub  id_rsa.pub.pub
sdl2/sdl2-include/: SDL.h
src/: graphic.c  graphic.h  main.c  main.h  math.c  math.h
